--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
         "psr-4": {
             "Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "start": "php -S 0.0.0.0:8080 -t public public/index.php"
     }
 }
